kube-files/passenger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: first-deployment
  name: first-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: first-deployment
    spec:
      containers:
      - image: praveen39/passenger-nginx:01
        name: passenger-nginx
        resources: {}
status: {}
