kube-files/passenger-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: first-deployment
  name: test
spec:
  ports:
  - name: test
    port: 3000
    protocol: TCP
    targetPort: 80
  selector:
    app: first-deployment
  type: NodePort
