kube-files/passenger-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloweb-ip
  labels:
    app: first-deployment
spec:
  backend:
    serviceName: test
    servicePort: 8080
